--- a/index.html
+++ b/index.html
@@ -18,13 +18,57 @@
 <body>
   <header class="p-4 mb-4 text-center border-bottom border-5">
     <h1 class="display-3">Task Board</h1>
-    <p class="lead">A simple Kanban board for task management</p>
+    <p class="lead">A interactive board for task management</p>
   </header>
   <div class="container">
     <div class="text-center mb-5">
       <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#formModal">Add Task</button>
     </div>
     <!-- Todo: Create a modal with a form to add tasks -->
+
+    <!-- Modal -->
+    <div id="formModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+    
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">Add a Task</h4>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <form id="project-form">
+            <div class="container">
+              <div class ="row">
+                <div class="col-sm-6">
+                  <div>
+                    <label for="title">Task Title:</label><br>
+                    <input type="text" id="title" name="title" placeholder="Task Title">
+                  </div>
+                </div>
+                <div class="col-sm-6">
+                  <div> 
+                    <label for="taskDueDate">Due Date:</label><br>
+                    <input placeholder="Task Due Date" autocomplete="off" type="date" class="form-control mb-3 hasDatepicker" id="taskDueDate" name="taskDueDate">
+                  </div>
+                </div>
+              </div>
+            </div><br>
+            <div class="container">
+              <div>
+                <label for="description">Task Description</label><br>
+                <textarea id="description" rows="5" cols="30" name="description" placeholder="Task Description"></textarea>
+              </div>
+            </div><br><br>
+            <div class="text-center mb-5">
+              <button type="submit" class="btn btn-success click" id="submit-button"  data-bs-target="#formModal" data-bs-toggle="modal">Add a Task!!</button>
+            </div>
+          </form>
+          </div>
+        </div>
+    
+      </div>
+    </div>
+<!--  -->
     <div class="row swim-lanes text-center justify-content-between">
       <div class="col-12 col-lg-4 d-flex">
         <div id="to-do" class="card border-light mb-3 lane flex-grow-1">
